--- a/README.me
+++ b/README.me
@@ -1,6 +1,6 @@
 # BrainSeg2D
 
-**BrainSeg2D** is a Python library for segmenting 2D brain slice images using [PyTorch](https://pytorch.org/) and [segmentation\_models\_pytorch](https://github.com/qubvel/segmentation_models.pytorch), with labeled ROI support for [Fiji (ImageJ)](https://imagej.net/software/fiji/). It supports multi-channel TIFF images, applies automatic data augmentations (via [albumentations](https://albumentations.ai/)), trains a UNet model, and generates ImageJ/Fiji ROI files for each predicted label. The library also includes a Fiji macro to convert initial ROIs (polygons) into labeled masks for model training.
+**BrainSeg2D** is a Python library for segmenting 2D brain slice images using [PyTorch](https://pytorch.org/) and [segmentation_models_pytorch](https://github.com/qubvel/segmentation_models.pytorch), with labeled ROI support for [Fiji (ImageJ)](https://imagej.net/software/fiji/). It supports multi-channel TIFF images, applies automatic data augmentations (via [albumentations](https://albumentations.ai/)), trains a UNet model, and generates ImageJ/Fiji ROI files for each predicted label. The library also includes a Fiji macro to convert initial ROIs (polygons) into labeled masks for model training.
 
 ---
 
